fix for home image/headline spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -805,7 +805,7 @@ footer input {
     }
 
     #hero {
-        height: 33vh;
+        height: 400px;
     }
 
     #hero-hero--thin {
